Run OpenRewrite/UpgradeToJava17